Release 5u17 (#33)